--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    implementation 'org.json:json:20200518'
-    }
+    implementation 'org.json:json:20201115'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+}
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
 
